# font-rs

./: Cargo.toml
examples/: draw_shape.rs  render.rs
src/: accumulate.rs  font.rs  geom.rs  lib.rs  raster.rs
